--- a/buildspec-press.yml
+++ b/buildspec-press.yml
@@ -9,7 +9,7 @@ phases:
 
   build:
     commands:
-      - echo ./packer build packer.json
+      - ./packer build packer.json
 
   post_build:
     commands:
