--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -54,6 +54,7 @@
     - net-tools
     - network-manager-openconnect
     - network-manager-openconnect-gnome
+    - pwgen
     - transmission-gtk
     - spotify-client
     - virt-manager
