--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -55,7 +55,9 @@
     - network-manager-openconnect
     - network-manager-openconnect-gnome
     - pwgen
+    - pm-utils
     - transmission-gtk
+    - tree
     - spotify-client
     - virt-manager
     - virt-viewer
