Normal computers dont have cups

--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -149,11 +149,11 @@
     enabled: yes
     state: started
 
-- name: cups
-  systemd:
-    name: cups
-    enabled: no
-    state: stopped
+# - name: cups
+#   systemd:
+#     name: cups
+#     enabled: no
+#     state: stopped
 
 - name: tor
   systemd:
