Add new packages

--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -93,6 +93,27 @@
     - ngrep
     - tor
     - wireshark
+    - radare2
+    - zmap
+    - masscan
+    - etherape
+    - kismet
+    - rkhunter
+    - clamav
+    - ettercap
+    - mtr
+    - hping3
+    - ngrep
+    - joh
+    - tcptrace
+    - netdude
+    - tcprelay
+    - dsniff
+    - scapy
+    - nbtscan
+    - aircrack-ng
+    - hashcat
+    - bro
 
 - name: Mange etc
   synchronize:
