--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -62,10 +62,19 @@
     - transmission-gtk
     - tree
     - spotify-client
-    - virt-manager
-    - virt-viewer
     - vlc
     - xscreensaver
+
+- name: Install virtualisation tools
+  apt:
+    state: present
+    pkg: "{{item}}"
+  with_items:
+    - virt-manager
+    - virt-viewer
+    - qemu-system-x86
+    - qemu-system-gui-gui
+    - ovmf
 
 - name: Install Dev tools
   apt:
@@ -83,6 +92,7 @@
     - ruby
     - virtualbox
     - virtualenv
+    - strace
 
 - name: Install Sec tools
   apt:
@@ -106,13 +116,59 @@
     - ngrep
     - john
     - tcptrace
-    - tcprelay
     - dsniff
     - scapy
     - nbtscan
     - aircrack-ng
     - hashcat
-    - bro
+
+- name: Security Repos
+  git:
+    repo: "{{item}}.git"
+    dest: "/home/a/github/security/tools/{{item.split("/")[-1]}}"
+  with_items:
+    - https://github.com/mitmproxy/mitmproxy
+    - https://github.com/zricethezav/gitleaks
+    - https://github.com/wpscanteam/wpscan
+    - https://github.com/bettercap/bettercap
+    - https://github.com/gophish/gophish
+    - https://github.com/NullArray/AutoSploit
+    - https://github.com/secdev/scapy
+    - https://github.com/jofpin/trape
+    - https://github.com/michenriksen/gitrob
+    - https://github.com/samratashok/nishang
+    - https://github.com/duo-labs/cloudmapper
+
+- name: Security - Docs
+  git:
+    repo: "{{item}}.git"
+    dest: "/home/a/github/security/docs/{{item.split("/")[-1]}}"
+  with_items:
+    - https://github.com/Hack-with-Github/Awesome-Hacking
+    - https://github.com/drduh/macOS-Security-and-Privacy-Guide
+    - https://github.com/Developer-Y/cs-video-courses
+    - https://github.com/shieldfy/API-Security-Checklist
+    - https://github.com/trimstray/the-book-of-secret-knowledge
+    - https://github.com/trimstray/test-your-sysadmin-skills
+    - https://github.com/sbilly/awesome-security
+    - https://github.com/vinta/awesome-python
+    - https://github.com/forter/security-101-for-saas-startups
+    - https://github.com/paragonie/awesome-appsec
+    - https://github.com/apsdehal/awesome-ctf
+    - https://github.com/drduh/YubiKey-Guide
+    - https://github.com/PaulSec/awesome-sec-talks
+    - https://github.com/hslatman/awesome-threat-intelligence
+    - https://github.com/meirwah/awesome-incident-response
+    - https://github.com/qazbnm456/awesome-web-security
+    - https://github.com/xairy/linux-kernel-exploitation
+
+
+- name: Sec - WiFi
+  git:
+    repo: "{{item}}"
+    dest: "/home/a/github/security/wifi/{{item.split("/")[-1]}}"
+  with_items:
+    - https://github.com/wifiphisher/wifiphisher
 
 - name: Mange etc
   synchronize:
