--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -108,6 +108,7 @@
     - chromium-chromedriver
     - docker
     - docker.io
+    - inotify-tools
     - libbz2-dev
     - libpcap-dev
     - yasm
