--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -323,12 +323,12 @@
 #     cron_file: ansible-update
 #     job: /usr/bin/ansible-pull -U https://github.com/akinnane/playbooks.git -i localhost,
 
-- name: Set homedir permissions
-  file:
-    dest: /home/a
-    owner: a
-    group: a
-    recurse: yes
+# - name: Set homedir permissions
+#   file:
+#     dest: /home/a
+#     owner: a
+#     group: a
+#     recurse: yes
 
 - name: Set authorized key
   authorized_key:
