--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -67,6 +67,7 @@
     - network-manager-openconnect-gnome
     - pavucontrol
     - pwgen
+    - rtl8812au-dkms
     - transmission-gtk
     - tree
     - xscreensaver
