--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -107,6 +107,7 @@
     - build-essential
     - checkinstall
     - chromium-chromedriver
+    - default-jdk
     - docker
     - docker.io
     - golang-go
